Landing Page - added a robot image - fixed robot position to create/ overlap banner and product section - added a hover animation to the robot

--- a/hey-team/src/components/Landing/landing.css
+++ b/hey-team/src/components/Landing/landing.css
@@ -15,6 +15,38 @@ html
     background-color: var(--alt-background);
 }
 
+/* Page Images */
+#robot-image
+{
+    animation: FloatUpDown 2s linear infinite;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+
+    margin-left: 58%;
+    margin-top: 33%;
+    
+    z-index: 3 !important;
+
+    background-image: url('../../assets/robot.svg');
+    background-repeat: no-repeat;
+
+    width: 100%;
+    height: 37%;
+}
+
+@keyframes FloatUpDown{
+    0%, 100% {
+        margin-top: 33%;
+    }
+    50% {
+        margin-top: 33.5%;
+    }
+}
+
+
 /* NavBar */
 #nav-header
 {
